# orm_python_l2

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_04_17_1941-db4b9acbc494_initial.py  2024_04_17_2232-6b791c55304c_nullable_product_id.py
src/: connection_manager.py  get_best_deal_context_use_case.py  settings.py  structure.py
src/models/: __init__.py  base.py  cashier.py  customer.py  product.py  sold_product.py
src/repositories/: cashier_repository.py  customer_repository.py  product_repository.py  sold_product_repository.py
tests/: conftest.py  helpers.py  test_cashier_repository.py  test_customer_repository.py  test_get_best_deal_context_use_case.py  test_product_repository.py
tests/mock_sql/: cashier.sql  customer.sql  product.sql  sold_product.sql
